
=head1 Improvements

=over

=item *

Added the C<--priority> option to the C<workflow publish> command in
L<bric_soap> and L<bric_republish>. Sponsored by Denison University. [David]

=item *

Added a C<$priority> argument to the C<publish> method of
L<Bric::Util::Burner> and modifed L<Bric::Util::Job::Pub> to pass its
priority. This is so that the priority of the publish job will be replicated
as the priority of the distribution job created by the publish. [David]

=item *

Added the C<Limit> parameter to the C<list()> method of L<Bric::Util::Job>.
Sponsored by Denison University. [David]

=item *

Added the C<--chunks> option to C<bric_queued>. Sponsored by Denison
University. [David]

=item *

Modified C<bric_queued> so that it only sleeps for C<--delay> seconds if it
executed no jobs. Otherwise it immediately runs again, on the assumption that
there will be more jobs that should be executed sooner rather than later. The
upshot is that files will now be distributed much sooner after publishling.
[David]

=back

=head1 Version 2.0.1 ()

=head1 Improvements

=over

=item *

Added C<SKIP_SSL_REDIRECT> F<bricolage.conf> directive. This directive
prevents Bricolage from redirecting to and from an SSL URL when C<SSL_ENABLE>
is turned on. The case for this is when Bricolage is running behind a reverse
proxy server that's handling SSL mappsings. Thanks to Alex Krohn for the
report. [David]

=item *

Added the "object" format for datetime values. Pass "object" as the formatting
string and a L<DateTime> object will be returned, rather than a string.
[David]

=item *

Refactored the SFTP mover to do proper error handling. Also removed the code
that "escapes" file names, as with more recent versions of Net::SSH2 it left
the backslashes in the file names. [David]

=item *

Bricolage now supports Apache 2 MPMs other than Prefork. YMMV (Bug #188).
[David]

=back

=head2 Bug Fixes

=over

=item *

Fixed a bug in the L<Bric::Util::ApacheReq> tests where they would fail if the